--- a/success.html
+++ b/success.html
@@ -20,8 +20,9 @@
           <section class="head">
             <h2 class="thanks">Thanks for subscribing!</h2>
             <p>
-              A confirmation email has been sent to <strong>ash@loremcompany.com.</strong>Please
-              open it and click the button inside to confirm your subscription.
+              A confirmation email has been sent to
+              <strong>ash@loremcompany.com.</strong> Please open it and click
+              the button inside to confirm your subscription.
             </p>
           </section>
         </section>
